third_party/move/move-compiler-v2/tests/checking/control_flow/for_loop_empty_novar.exp

Diagnostics:
error: undeclared `<SELF>_0::_`
  ┌─ tests/checking/control_flow/for_loop_empty_novar.move:4:9
  │
4 │         for (_ in 0..10) {};
  │         ^^^^^^^^^^^^^^^^^^^
